--- a/alphabet-filter/src/alphabet-filter.scss
+++ b/alphabet-filter/src/alphabet-filter.scss
@@ -148,7 +148,7 @@
           }
         }
 
-        @each $item in ('a','b','c','d','e','f','g','h','i','j','k','l','m','o','p','q','r','s','t','u','v','x','y','z') {
+        @each $item in ('a','b','c','d','e','f','g','h','i','j','k','l','m','o','p','q','r','s','t','u','v','w','x','y','z') {
           .let-#{$item} ~ .let-#{$item} {
             > span { display: none; }
           }
