--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,9 @@
+$color: #4b4b4b;
+$bg: #FFF;
+
 html, body {
-  padding: 0;
-  margin: 0;
-  position: relative;
-  height: 100%;
-  box-sizing: border-box;
-  color: #555;
-
-  .search-list {
-    .search-list-item {
-      padding: 10px 0;
-
-      > img {
-        display: inline-block;
-        vertical-align: middle;
-        width: 50px;
-        height: 50px;
-        border-radius: 25px;
-      }
-
-      > span {
-        padding-left: 15px;
-        display: inline-block;
-        vertical-align: middle;
-      }
-    }
-  }
+    margin: 0;
+    font-family: Calibri, Arial, Helvetica, sans-serif;
+    background: #FAFAFA;
+    height: 100%;
 }
