--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,7 +93,7 @@
                 font-size: 12px;
                 margin-bottom: 25px;
                 max-width: 500px;
-                
+                font-weight: normal;
                 color: #888888;
                 padding: 10px 20px;
                 background: #FFF;
